components/policies/best-practices/ban-external-ip-services/binding.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ban-external-ip-services
  labels:
    app.kubernetes.io/name: ban-external-ip-services
    app.kubernetes.io/component: best-practices
spec:
  policyName: ban-external-ip-services
  validationActions: [Deny]
