components/policies/best-practices/ban-external-ip-services/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ban-external-ip-services
  labels:
    app.kubernetes.io/name: ban-external-ip-services
    app.kubernetes.io/component: best-practices
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["services"]
        scope:        "Namespaced"
  validations:
    - expression: "!has(object.spec.externalIPs)"
      message: Services using external IPs are forbidden
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
